<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dr. Food</string>

    <!-- NavigationDrawerFragment titles -->
    <string name="title_section1">Dr. Food</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">About</string>

    <!-- ===== FRAGMENT_HOME ===== -->
    <!-- Home Button names -->
    <string name="home_button_name_trackfood">Track your food!</string>
    <string name="home_button_name_editfood">Edit tracked food</string>
    <string name="home_button_name_showhistory">Show history</string>

    <string name="home_first_steps">Are you new? Start tracking a food</string>

    <!-- ===== FRAGMENT_SETTING ===== -->
    <string name="settings_userdetailstittle">User Details</string>
    <string name="settings_name">Name</string>
    <string name="settings_email">Email</string>
    <string name="settings_conffoods">Configure food times</string>

    <string name="settings_confreminders">Configure reminders</string>

    <!-- Others -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- Test -->
    <string name="Lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat purus semper lorem pretium pretium. Phasellus tincidunt mi sed nisl blandit, non dapibus eros pulvinar. Integer non velit aliquet, bibendum arcu eget, vehicula lacus. Sed quis tincidunt mauris, eget pellentesque ante. Morbi neque diam, molestie sed ultrices quis, feugiat at est.</string>
    <string name="title_activity_track_food">Track your food!</string>
    <string name="hello_world">Hello world!</string>

    <!-- ===== ACTIVITY_FOOD_SELECTOR ===== -->
    <string name="title_activity_food_selector">Select a food</string>
    <string name="hint_searcher_food_selector">Search food...</string>
    <string name="accesibility_favourite_icon">Favourites</string>

    <!-- ===== ACTIVITY_TRACKFOOD ===== -->
    <string name="cal_consumed_lunch">200 cal this lunch</string>
    <string name="cal_consumed_today">2000 cal today</string>
    <string name="cal_recommended_today">1500 cal recommended</string>
    <string name="accessibility_delete_icon">delete</string>
    <string name="accessibility_previous_icon">previous</string>
    <string name="accessibility_next_icon">next</string>

    <!-- ===== ACTIVITY_FOOD_DETAIL ===== -->
    <string name="quantity_food_selector">Quantity: </string>
    <string name="calories_measure">kcal </string>
    <string name="proteins_text">proteins</string>
    <string name="carbohydrates_text">carbohydrates</string>
    <string name="fats_text">fats</string>

    <!-- ===== ACTIVITY_HISTORY ===== -->
    <string name="title_activity_history">HistoryActivity</string>

    <!-- ===== LOGIN_ACTIVITY ===== -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_skip">Skip</string>
    <string name="action_skip_summary">You can login as anonymous user...</string>

    <!-- GUEST PREFROM -->
    <string name="guest_done_button">Done</string>
    <string name="guest_name_hint">Name</string>
    <string name="guest_email_hint">Email</string>
    <string name="action_guest_summary">Please, fill the following fields:</string>

    <!-- REGISTER FORM -->
    <string name="signup_done_button">Sign up</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_email_hint">Email</string>
    <string name="action_signup_summary">To register a new account fill the following fields:</string>
    <string name="signup_prompt_password">Password</string>
    <string name="signup_prompt_password_retype">Retype password</string>
    <string name="signup_error_invalid_password1">This password is too short</string>
    <string name="signup_error_invalid_password2">Passwords must be equal</string>
    <string name="signup_error_invalid_email">Please, use other email</string>

    <!-- ====================== OTHERS ====================== -->
    <!-- ===== FOOD CATEGORIES ===== -->
    <string name="food_category_green">green</string>
    <string name="food_category_orange">orange</string>
    <string name="food_category_red">red</string>
    <string name="title_activity_pre_guest">Basic information</string>

    <!-- ===== FOOD TIMES ===== -->
    <string name="food_time_morning">Morning</string>
    <string name="food_time_lunch">Lunch</string>
    <string name="food_time_snack">Snack</string>
    <string name="food_time_dinner">Dinner</string>

    <!-- ====================== HTTP ====================== -->
    <string name="http_sync_url" translatable="false"></string>
    <string name="http_sync_timeout" translatable="false">2000</string>
    <string name="http_status_not_sync">An error ocurred. It isn\'t possible to sync</string>
    <string name="http_status_user_not_valid">An error ocurred. Invalid user</string>
    <string name="http_status_password_not_valid">An error ocurred. Invalid password</string>
    <string name="http_status_connection_timeout">An error ocurred. Connection timeout</string>
    <string name="http_status_authentication_ok">Authentication successful!</string>
    <string name="http_status_authentication_ko">Authentication unsuccessful. Invalid user/password combination</string>
    <string name="http_status_registration_ok">Registration successful!</string>
    <string name="http_status_registration_ko">Registration unsuccessful. Try again later</string>
    <string name="http_status_edit_ok">User information was modified successfully</string>
    <string name="http_status_edit_ko">An error ocurred during user information edition.</string>
    <string name="http_sync_tracking_ok">Food tracking correctly synced</string>
    <string name="http_sync_tracking_ko">An error ocurred during user information edition</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_splash">Splash</string>


</resources>
