<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/login_background"
                tools:context="com.ocasoft.drfood.SignUpActivity">

    <!-- Login progress -->
    <ImageView
        android:layout_width="174dp"
        android:layout_height="205dp"
        android:id="@+id/imageView2"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ScrollView
    android:id="@+id/signup_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/imageView2">

        <LinearLayout
            android:id="@+id/email_signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/signup_hint_textview"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/skip_login_margin"
                android:text="@string/action_signup_summary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/nameSignUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_name_hint"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/emailSignUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/passwordSignUpET1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/signup_done_button"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/passwordSignUpET2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_prompt_password_retype"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/signup_done_button"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <Button
                android:id="@+id/signup_signup_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signup_done_button"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/registry_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>